<resources>
    <string name="app_name">toktok</string>
    <string name="naver_map_your_client_id_here">zrthn8561w</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_map">지도</string>
    <string name="title_product">상품</string>
    <string name="title_search">검색</string>
    <string name="title_favorit">즐겨찾기</string>
    <string name="title_info">내정보</string>
    <string name="title_sign_up">회원가입</string>

    <string name="btn_map_my_location">내 위치</string>

    <string name="info_title_login">로그인을 해주세요</string>
    <string name="btn_info_title_login">로그인</string>
    <string name="btn_info_title_logout">로그아웃</string>
    <string name="btn_info_text_modify_info">내 정보 수정</string>
    <string name="btn_info_text_modify_my_location">내 위치 정보</string>
    <string name="btn_info_text_register_list">예약내역</string>

    <string name="info_my_name">닉네임 / 이름</string>
    <string name="info_my_info">정보</string>

    <string name="splash_confirm_btn">확인</string>
    <string name="splash_title_text">원할한 톡톡 이용을 위해 필요한 권한입니다.</string>
    <string name="splash_permission_necessary">필수권한</string>
    <string name="splash_permission_necessary_current_location">현재 위치</string>
    <string name="splash_permission_necessary_current_location_text">지도에서 사용자의 현재 위치를 찾기 위해 필요합니다.</string>

    <string name="sign_up_main_text">환영합니다 \nTokTok 계정을 \n만들어 볼까요?</string>
    <string name="sign_up_account_label">계정 입력</string>
    <string name="sign_up_password_label">비밀번호 입력</string>
    <string name="sign_up_password_check_label">비밀번호 확인</string>

    <string name="product_list_item_text_sell_by_date">유통기한</string>
    <string name="product_list_item_text_price">정상가</string>
    <string name="product_list_item_text_discounted_price">판매가</string>

</resources>