<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginVertical="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lineHeight="24dp"
            android:text="@string/title_sign_up"
            android:textColor="@color/main_title_text_color"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_devide_line_view_color"
        app:layout_constraintTop_toBottomOf="@id/ll_top" />

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/sign_up_main_text"
            android:textColor="@color/text_sign_up_page"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/sign_up_account_label"
            android:textColor="@color/text_sign_up_page"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="이메일 주소 또는 아이디"
            android:inputType="text"
            android:textColorHint="@color/text_sign_up_edittext_hint"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/sign_up_password_label"
            android:textColor="@color/text_sign_up_page"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="비밀번호"
            android:inputType="textPassword"
            android:textColorHint="@color/text_sign_up_edittext_hint"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:text="@string/sign_up_password_check_label"
            android:textColor="@color/text_sign_up_page"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="비밀번호를 다시 한 번 입력해주세요"
            android:inputType="textPassword"
            android:textColorHint="@color/text_sign_up_edittext_hint"
            android:textSize="14dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_sign_up_button_bg"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="16dp"
        android:text="회원가입"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>